# agent-os-oss

./: .env.example  .gitignore  .loop_state.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.yaml  insert_run.py  pyproject.toml  release_notes.md
.github/workflows/: integration-ci.yml  ontology-ci.yml
agentos-ui/: package-lock.json  package.json
docker/: docker-compose.yml  otel-collector-config.yaml
docker/ontology/: it-asset-mgmt.owl  it-asset-mgmt.shacl.ttl
docs/: 平台介绍与操作手册.md
scripts/: build_ui.sh  check_ontology.py  check_wiring.py  import_ontology.py  pre-commit.hook  run_demo.py  run_uat.py  setup.sh
src/adapters/: base.py  cli_adapter.py  feishu_adapter.py
src/agentos_cli/: __init__.py  cli.py
src/agentos_kernel/: kernel.py  llm_driver.py  main.py
src/agentos_main/: main.py
src/database/: __init__.py  feedback_db.py  state_store.py
src/governance/: mcp_server.py  neo4j_client.py  schema_provider.py  shacl_validator.py  write_gate.py
src/observability/: __init__.py  langfuse_integration.py  security_dimensions.py  telemetry.py
src/policies/: autonomy_policy.py  policy_config.yaml
tests/: conftest.py  fixtures_utils.py  golden_dataset.py  test_api_endpoints.py  test_autonomy_policy.py  test_billing_fuse.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_kernel.py  test_llm_driver.py  test_main_app.py  test_observability.py  test_schema_provider.py  test_security_dimensions.py  test_shacl_validator.py  test_wasm_sandbox.py  test_write_gate.py
(+100 files in other folders)
