[project]
name = "agent-os-poc"
version = "0.1.0"
description = "Agent OS MVP — agentos_kernel, MCP governance gateway, Neo4j semantic ontology"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.28.0",
    "neo4j>=5.27.0",
    "pyshacl>=0.25.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rdflib>=7.1",
    "structlog>=24.0",
    "lark-oapi>=1.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "wasmtime>=23.0",
    "langfuse>=2.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation>=0.46",
    "opentelemetry-exporter-otlp>=1.25",
    "numpy>=1.24",
    "simpleeval>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers>=4.0",
    "pylint>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_kernel", "src/adapters", "src/governance", "src/policies", "src/security", "src/sandbox", "src/observability"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "integration: L2 集成/接线测试，需要 Docker(testcontainers)，比单元测试慢",
]
